Added scrollable tables for custom ordering view. Currently incorrectly displays the last loaded data - needs fixing. Also commented out location checking for easier testing.

--- a/iOS/Lightwait/Base.lproj/Main.storyboard
+++ b/iOS/Lightwait/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="nHn-wJ-cmq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="nHn-wJ-cmq">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--View Controller - lightwait-->
@@ -62,7 +62,7 @@
             </objects>
             <point key="canvasLocation" x="613" y="110"/>
         </scene>
-        <!--Grab View Controller - lightwait-->
+        <!--Grab View Controller - Grab 'N Go-->
         <scene sceneID="yBY-yg-HL8">
             <objects>
                 <viewController id="jJP-DB-e70" customClass="GrabViewController" sceneMemberID="viewController">
@@ -90,7 +90,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="lightwait" id="VHC-NH-DJP"/>
+                    <navigationItem key="navigationItem" title="Grab 'N Go" id="VHC-NH-DJP"/>
                     <connections>
                         <outlet property="menuTable" destination="avA-Jl-tVj" id="Ev2-qf-xgF"/>
                     </connections>
@@ -99,7 +99,7 @@
             </objects>
             <point key="canvasLocation" x="1146" y="-623"/>
         </scene>
-        <!--Custom Order View Controller - lightwait-->
+        <!--Custom Order View Controller - Custom Order-->
         <scene sceneID="Faa-kB-0ed">
             <objects>
                 <viewController id="6dS-Q1-6q2" customClass="CustomOrderViewController" sceneMemberID="viewController">
@@ -111,16 +111,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Custom Order" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jWB-3r-FA7">
-                                <rect key="frame" x="106" y="107" width="109" height="21"/>
+                            <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IBo-dJ-L1A">
+                                <rect key="frame" x="0.0" y="431" width="320" height="49"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <items/>
+                            </tabBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="UzS-d5-JH1">
+                                <rect key="frame" x="42" y="95" width="236" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qmK-Wz-8LM">
+                                <rect key="frame" x="0.0" y="151" width="320" height="280"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="lightwait" id="rzy-IJ-Gko"/>
+                    <navigationItem key="navigationItem" title="Custom Order" id="rzy-IJ-Gko"/>
+                    <connections>
+                        <outlet property="scrollView" destination="qmK-Wz-8LM" id="ns4-4U-2Ih"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gyc-Tb-Iec" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -144,7 +155,7 @@
             </objects>
             <point key="canvasLocation" x="87" y="110"/>
         </scene>
-        <!--Saved Orders View Controller - lightwait-->
+        <!--Saved Orders View Controller - Saved Orders-->
         <scene sceneID="53g-oN-g8l">
             <objects>
                 <viewController id="u1u-Ug-BGd" customClass="SavedOrdersViewController" sceneMemberID="viewController">
@@ -172,7 +183,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="lightwait" id="C0U-wt-DVp"/>
+                    <navigationItem key="navigationItem" title="Saved Orders" id="C0U-wt-DVp"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AG7-Ff-rE6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
