--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -33,6 +33,10 @@ body {
 	/* margin-top: 1em; */
 }
 
+.header span {
+	font-size: 1.6em;
+}
+
 
 /******************/
 /*   Order Pane   */
@@ -103,6 +107,11 @@ ul {
 	position: absolute;
 	bottom:0;
 	margin: 0 auto;
+}
+
+.sidebar button {
+	width: 80%;
+	margin: 0 10%;
 }
 
 
