--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -45,29 +45,29 @@ nav {
 	background-color:#2491FF;
 	height:4em;
 	box-shadow: 0 0 10px #888;
-	border-bottom: 2px solid #248DFF
+	border-bottom: 2px solid #248DFF;
+	z-index:2;
+	position:static;
 }
 
 nav h1 {
-	margin:0;
-	font-size:2em;
-	margin: 0.5em 0.6em;
 	float:left;
-	color:rgba(255,255,255,0.9);
+	font-size:2em;
+	margin:.5em auto auto 0.6em;
+	color:rgba(255,255,255,0.95);
 }
 
 nav ul {
-	clear:none;
 	list-style:none;
-	float:right;
 	margin:0;
+	float:right;
+	clear:none;
 }
 
 nav li {
-	float:right;
-	height:3em;
-	margin-right:1em;
-	margin-top:1.6em;
+	float:left;
+	margin:1.6em 1em auto auto;
+	margin-bottom: 0;
 }
 
 nav a {
@@ -87,21 +87,21 @@ nav a:hover {
 /******************/
 .window {
 	width:80%;
-	height:90%;
+	z-index:1;
 }
 
 .order {
-	width:23%;
-	height:50%;
-	background-color: rgba(167,219,216,0.8);
-	padding: 0 1%;
+	width:22%;
+	padding:1em 1%;
 	min-width: 180px;
-	min-height: 260px;
+	min-height: 300px;
 	float:left;
+	border-bottom: 1px solid rgba(0,0,0,0.15);
+	border-right: 1px solid rgba(0,0,0,0.15);
 }
 
-.order:nth-child(even) {
-	background-color: rgba(167,219,216,0.6);
+.order:nth-child(odd) {
+	
 }
 
 .order h1 {
