Availability.php can modify json based on user input. Ready to send the json back to server

--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -182,3 +182,6 @@ div.order-wrapper {
 	background-color: rgba(250,105,0,0.4);
 	margin-left: 3px;
 }
+.mainForm input[type="submit"]{
+	clear: left;
+}
