--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -96,12 +96,13 @@ nav a:hover {
 .sidebar {
 	width:20%;
 	height:100%;
-	background-color: green;
 	position:absolute;
 	top:4em;
 	right:0;
 	min-width:200px;
 	min-height:520px;
+	background-color: rgba(36,145,255,0.3);
+	background-color: rgba(0,0,0,0.3);
 }
 
 .sidebar #quantityList{
@@ -236,6 +237,9 @@ div.order-wrapper {
 	font-size: 16px;
 }
 
+/********************/
+/*   Availability   */
+/********************/
 .avail h2{
 	text-align: center;
 }
