--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -76,6 +76,7 @@ nav a:hover {
 	min-height: 300px;
 	float:left;
 	border-bottom: 1px solid rgba(0,0,0,0.15);
+	border-right: 1px solid rgba(0,0,0,0.15);
 }
 
 .queue h1 {
