Added a seperate js page for queue page

--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -58,13 +58,18 @@ nav a:hover {
 }
 
 
-/******************/
-/*   Order Pane   */
-/******************/
+/********************/
+/*   Queue Window   */
+/********************/
 .window {
 	width:80%;
 	height:100%;
 	z-index:1;
+}
+
+.window > h1 {
+	color: #AAA;
+	text-align: center;
 }
 
 .queue {
